--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,12 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
-  format-check:
+  lint-and-run:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,8 +22,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black
+        pip install -r requirements.txt
+        pip install flake8
 
-    - name: Run Black for code formatting check
+    - name: Lint with flake8
       run: |
-        black --check .
+        # Run flake8 to check for code style and quality issues
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # Run flake8 to check for other style issues without failing the build
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Run the FastAPI server
+      run: |
+        uvicorn main:app --host 0.0.0.0 --port 8000
