--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,27 +11,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Lint with flake8
-      run: |
-        # Run flake8 to check for code style and quality issues
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Run flake8 to check for other style issues without failing the build
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Start the FastAPI server in the background
+        run: |
+          uvicorn main:app --host 0.0.0.0 --port 8000 &
+        # The '&' runs the server in the background
 
-    - name: Run the FastAPI server
-      run: |
-        uvicorn main:app --host 0.0.0.0 --port 8000
+      - name: Wait for server to start
+        run: |
+          # Wait up to 30 seconds for the server to start
+          for i in {1..30}; do
+            if curl -s http://127.0.0.1:8000/; then
+              echo "Server is up!"
+              exit 0
+            fi
+            sleep 1
+          done
+          echo "Server did not start in time" >&2
+          exit 1
+
+      - name: Stop the server
+        if: always()
+        run: |
+          # Kill the uvicorn process
+          pkill -f "uvicorn"
